ajuste del navbar

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -344,7 +344,7 @@ body {
   /* Navbar */
 
   .navbar {
-    padding: 0 10px 0 0;
+    padding: 5px 10px 5px 10px;
   }
 
   .navbar > .container {
@@ -594,7 +594,7 @@ body {
   /* Navbar */
 
   .navbar {
-    padding: 0 10px 0 0;
+    padding: 5px 10px 5px 10px;
   }
 
   .navbar > .container {
