ajustes en reserva

--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,13 @@ body {
 }
 
 .texto-reservas {
-  grid-column: 1/-1;
+  grid-column: 2/-2;
   text-align: center;
+}
+@media screen and (max-width: 400px) {
+  .texto-reservas {
+    grid-column: 1/-1;
+  }
 }
 
 .opcion-de-reserva {
