--- a/scss/style.scss
+++ b/scss/style.scss
@@ -176,7 +176,7 @@ body {
 }
 
 .button-dos:hover {
-  box-shadow: 5px 8px 15px #d1724990;
+  box-shadow: 5px 8px 10px #504e4e93;
 }
 
 .opcion-de-reserva {
@@ -316,6 +316,7 @@ body {
 }
 
 .subtitulo-footer {
+  font-family:"Raleway", sans-serif;
   font-size: 20px;
   margin: 10px 20px 10px 20px;
 }
@@ -568,6 +569,7 @@ body {
   }
 
   .subtitulo-footer {
+    font-family:"Raleway", sans-serif;
     font-size: 15px;
     margin-left: 30px;
     margin-right: 30px;
@@ -805,6 +807,7 @@ body {
   }
 
   .subtitulo-footer {
+    font-family:"Raleway", sans-serif;
     font-size: 13px;
   }
 
