--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -176,7 +176,7 @@ $base-error: #bb2929;
   border-color: $baseTerciaria-color;
 }
 
-.texto_reserva {
+.texto_reserva, .result_reserva {
   color: $baseTerciaria-color;
 }
 .btn-volver,
