--- a/scss/style.scss
+++ b/scss/style.scss
@@ -599,13 +599,13 @@ body {
   }
 
   .img-logo {
-    width: 70px;
+    width: 75px;
     height: auto;
   }
 
   .nav-link {
     color: #fff !important;
-    margin: 2px 10px;
+    margin: 2px;
   }
 
   .navbar-collapse {
