--- a/css/style.css
+++ b/css/style.css
@@ -2692,12 +2692,12 @@ body {
     grid-column: 2/-2;
   }
   .img {
-    max-width: 90%;
+    max-width: 89%;
     margin: 0 20px 40px 20px;
   }
   .titulo-tiare {
     font-size: 22px;
-    margin-top: 10px;
+    margin-top: 20px;
   }
   .parrafo-tiare {
     font-size: 18px;
@@ -2722,15 +2722,15 @@ body {
   }
   .titulo-reserva {
     font-size: 22px;
-    margin-top: 30px;
+    margin-top: 40px;
+    margin-bottom: 0;
   }
   .parrafo-reserva {
     font-size: 18px;
     text-align: center;
-    margin-left: 40px;
-    margin-right: 40px;
     padding-left: 20px;
     padding-right: 20px;
+    padding-top: 0;
   }
   .button-dos {
     height: 42px;
@@ -2758,7 +2758,7 @@ body {
     font-size: 22px;
     font-weight: bold;
     margin-top: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
   .items {
     grid-column: 1/-1;
@@ -2805,6 +2805,7 @@ body {
   }
   .titulo-empresa {
     font-size: 22px;
+    padding-top: 10px;
   }
   .parrafo-empresa {
     text-align: justify;
@@ -2887,6 +2888,7 @@ body {
   }
   .titulo-tiare {
     font-size: 19px;
+    margin-top: 0;
   }
   .textos-tiare {
     grid-column: 2/-2;
@@ -2937,6 +2939,7 @@ body {
     text-align: center;
     margin-left: 5px;
     margin-right: 5px;
+    margin-top: 10px;
   }
   .opcion {
     font-size: 15px;
@@ -2953,8 +2956,8 @@ body {
     justify-content: center;
     font-size: 19px;
     font-weight: bold;
-    margin-top: 20px;
-    margin-bottom: 30px;
+    margin-top: 15px;
+    margin-bottom: 10px;
   }
   .items {
     grid-column: 1/-1;
@@ -2993,6 +2996,7 @@ body {
   }
   .titulo-empresa {
     font-size: 19px;
+    margin-bottom: 10px;
   }
   .parrafo-empresa {
     text-align: justify;
