--- a/scss/style.scss
+++ b/scss/style.scss
@@ -79,8 +79,7 @@ body {
 }
 
 .titulo-tiare {
-  font-size: 32px;
-  font-weight: bold;
+  font-size: 30px;
 }
 
 .parrafo-tiare {
@@ -141,8 +140,7 @@ body {
 }
 
 .titulo-reserva {
-  font-size: 32px;
-  font-weight: bold;
+  font-size: 30px;
   margin-top: 100px;
   margin-bottom: 30px;
 }
@@ -203,7 +201,6 @@ body {
   display: flex;
   justify-content: center;
   font-size: 30px;
-  font-weight: bold;
   margin-top: 90px;
   margin-bottom: 30px;
 }
@@ -256,8 +253,7 @@ body {
 }
 
 .titulo-empresa {
-  font-size: 32px;
-  font-weight: bold;
+  font-size: 30px;
 }
 
 .parrafo-empresa {
@@ -308,8 +304,7 @@ body {
 }
 
 .titulo-footer {
-  font-size: 32px;
-  font-weight: bold;
+  font-size: 30px;
   margin: 20px 10px 0 10px;
 }
 
@@ -425,7 +420,7 @@ body {
   }
 
   .titulo-reserva {
-    font-size: 23px;
+    font-size: 22px;
     margin-top: 40px;
     margin-bottom: 0;
   }
@@ -441,7 +436,7 @@ body {
 
   .button-dos {
     height: 42px;
-    width: 200px;
+    width: 197px;
     font-size: 20px;
   }
 
@@ -468,7 +463,6 @@ body {
     display: flex;
     justify-content: center;
     font-size: 22px;
-    font-weight: bold;
     margin-top: 20px;
     margin-bottom: 10px;
   }
@@ -495,7 +489,6 @@ body {
 
   .subtitulo-servicio {
     font-size: 18px;
-    font-weight: bold;
     margin-top: 30px;
   }
 
@@ -633,7 +626,7 @@ body {
   }
 
   .titulo-tiare {
-    font-size: 19px;
+    font-size: 18px;
     margin-top: 0;
   }
 
@@ -676,7 +669,7 @@ body {
 
   .button-dos {
     height: 40px;
-    width: 180px;
+    width: 170px;
     font-size: 17px;
   }
 
@@ -687,7 +680,7 @@ body {
   }
 
   .titulo-reserva {
-    font-size: 19px;
+    font-size: 18px;
     margin-top: 30px;
     margin-bottom: 0;
   }
@@ -716,8 +709,7 @@ body {
     grid-column: 1/-1;
     display: flex;
     justify-content: center;
-    font-size: 19px;
-    font-weight: bold;
+    font-size: 18px;
     margin-top: 15px;
     margin-bottom: 10px;
   }
@@ -744,7 +736,6 @@ body {
 
   .subtitulo-servicio {
     font-size: 16px;
-    font-weight: bold;
     margin-top: 30px;
   }
 
@@ -765,7 +756,7 @@ body {
   }
 
   .titulo-empresa {
-    font-size: 19px;
+    font-size: 18px;
     margin-bottom: 10px;
   }
 
@@ -803,7 +794,7 @@ body {
   }
 
   .titulo-footer {
-    font-size: 19px;
+    font-size: 18px;
   }
 
   .subtitulo-footer {
@@ -859,7 +850,7 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  font-size: 30px;
+  font-size: 29px;
   padding: 20px 0 10px 0;
 }
 .texto_contactanos {
@@ -880,8 +871,7 @@ input[type="checkbox"] {
 
 .formulario__label {
   display: block;
-  font-weight: bold;
-  font-size: 15px;
+  font-size: 17px;
   padding: 15px 0 2px 0;
   cursor: pointer;
 }
@@ -1039,7 +1029,7 @@ input[type="checkbox"] {
   }
 
   .formulario__label {
-    font-size: 14px;
+    font-size: 15px;
   }
 
   .btn__dos {
@@ -1082,7 +1072,7 @@ input[type="checkbox"] {
   }
 
   .titulo_contactanos {
-    font-size: 19px;
+    font-size: 18px;
     padding: 10px 0 10px 0;
     text-align: center;
   }
@@ -1105,7 +1095,7 @@ input[type="checkbox"] {
   .btn__dos {
     display: flex;
     flex-direction: column-reverse;
-    padding: 10px 20px 10px 0;
+    padding: 10px 5px 10px 0;
   }
 
   .btn_volver {
@@ -1154,7 +1144,7 @@ input[type="checkbox"] {
 .titulo_cotizacion {
   font-family: "Kalam", cursive;
   grid-column: 1/-1;
-  font-size: 30px;
+  font-size: 29px;
   text-align: center;
   padding-top: 20px;
 }
@@ -1170,7 +1160,7 @@ input[type="checkbox"] {
 .palabra_fecha,
 .palabra_horas,
 .palabra_invitados {
-  font-size: 16px;
+  font-size: 17px;
   font-weight: bold;
 }
 
@@ -1203,7 +1193,7 @@ input[type="checkbox"] {
 
 .texto-turnos {
   margin-left: 5px;
-  font-size: 16px;
+  font-size: 17px;
 }
 
 .turnos {
@@ -1390,7 +1380,7 @@ input[type="checkbox"] {
 
 .formulario__input-error__tres {
   color: #bb2929;
-  font-size: 13px;
+  font-size: 1p3x;
   margin-top: 5px;
   display: none;
   align-items: center;
@@ -1434,8 +1424,7 @@ input[type="checkbox"] {
   .palabra_fecha,
   .palabra_horas,
   .palabra_invitados {
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 15px;
   }
 
   #opciones {
@@ -1465,7 +1454,7 @@ input[type="checkbox"] {
   }
 
   .texto-turnos {
-    font-size: 16px;
+    font-size: 15px;
     margin-right: 6px;
   }
 
@@ -1619,7 +1608,7 @@ input[type="checkbox"] {
 
   .titulo_cotizacion {
     grid-column: 1/-1;
-    font-size: 19px;
+    font-size: 18px;
     text-align: center;
     padding: 20px 25px 0 25px;
   }
@@ -1636,8 +1625,7 @@ input[type="checkbox"] {
   .palabra_fecha,
   .palabra_horas,
   .palabra_invitados {
-    font-size: 15px;
-    font-weight: bold;
+    font-size: 14px;
   }
 
   #opciones {
@@ -1668,7 +1656,7 @@ input[type="checkbox"] {
   }
 
   .texto-turnos {
-    font-size: 15px;
+    font-size: 14px;
     margin-right: 13px;
     margin-bottom: 10px;
   }
@@ -1829,25 +1817,22 @@ input[type="checkbox"] {
   font-family: "Kalam", cursive;
   display: flex;
   flex-direction: column;
-  font-size: 30px;
+  font-size: 29px;
   padding: 20px 0 10px 0;
   align-items: center;
 }
 .texto_reservar_uno {
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 19px;
 }
 
 .texto_reservar_dos {
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 19px;
   padding-top: 30px;
 }
 
 .formulario__label__dos {
   display: block;
-  font-weight: bold;
-  font-size: 15px;
+  font-size: 17px;
   padding: 15px 0 2px 0;
   cursor: pointer;
 }
@@ -1991,16 +1976,16 @@ input:disabled {
     text-align: center;
   }
   .texto_reservar_uno {
-    font-size: 16px;
+    font-size: 17px;
   }
 
   .texto_reservar_dos {
-    font-size: 16px;
+    font-size: 17px;
     padding-top: 30px;
   }
 
   .formulario__label__dos {
-    font-size: 14px;
+    font-size: 15px;
   }
 
   .btn__tres {
@@ -2043,18 +2028,16 @@ input:disabled {
   }
 
   .titulo_reservar {
-    font-size: 19px;
+    font-size: 18px;
     padding: 20px 0 10px 0;
     align-items: center;
   }
   .texto_reservar_uno {
-    font-size: 14px;
-    font-weight: bold;
+    font-size: 15px;
   }
 
   .texto_reservar_dos {
-    font-size: 14px;
-    font-weight: bold;
+    font-size: 15px;
     padding-top: 30px;
   }
 
@@ -2065,7 +2048,7 @@ input:disabled {
   .btn__tres {
     display: flex;
     flex-direction: column-reverse;
-    padding: 30px 20px 10px 0;
+    padding: 30px 0 10px 0;
     justify-content: center;
   }
 
