--- a/scss/_medidas.scss
+++ b/scss/_medidas.scss
@@ -107,7 +107,7 @@
 }
 
 .reservas {
-  height: 490px;
+  height: 49z0px;
   @media screen and (max-width: 767px) {
     height: auto;
     padding: 0.625rem;
