--- a/scss/style.scss
+++ b/scss/style.scss
@@ -130,7 +130,7 @@ body {
 .reservas {
   background: #151515;
   color: #fff;
-  height: 500px;
+  height: 470px;
 }
 
 .texto-reservas {
@@ -292,7 +292,7 @@ body {
 .footer {
   background-color: #000000;
   color: #fff;
-  height: 320px;
+  height: 340px;
   padding: 20px 0;
 }
 
@@ -305,7 +305,7 @@ body {
 
 .titulo-footer {
   font-size: 30px;
-  margin: 20px 10px 0 10px;
+  margin: 40px 10px 0 10px;
 }
 
 .subtitulo-footer {
@@ -384,7 +384,7 @@ body {
 
   .img {
     max-width: 89%;
-    margin: 0 20px 40px 20px;
+    margin: 0 20px 60px 20px;
   }
 
   .titulo-tiare {
@@ -463,7 +463,7 @@ body {
     display: flex;
     justify-content: center;
     font-size: 22px;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-bottom: 10px;
   }
 
@@ -520,7 +520,7 @@ body {
 
   .titulo-empresa {
     font-size: 22px;
-    padding-top: 10px;
+    padding-top: 20px;
   }
 
   .parrafo-empresa {
@@ -537,7 +537,7 @@ body {
   .img-empresa {
     width: 80%;
     height: auto;
-    margin: 0 10px 20px 10px;
+    margin: 0 10px 40px 10px;
   }
 
   /* Scroll */
@@ -622,7 +622,7 @@ body {
 
   .header {
     height: auto;
-    padding: 20px 0;
+    padding: 10px 0;
   }
 
   .titulo-tiare {
@@ -676,7 +676,8 @@ body {
   .opcion-de-reserva {
     grid-column: 1/-1;
     display: flex;
-    margin: 20px;
+    margin: 10px;
+    padding-bottom: 10px;
   }
 
   .titulo-reserva {
@@ -696,6 +697,7 @@ body {
   .opcion {
     font-size: 15px;
     text-align: justify;
+    margin-bottom: 10px;
   }
 
   /* Main - Servicios */
@@ -710,7 +712,7 @@ body {
     display: flex;
     justify-content: center;
     font-size: 18px;
-    margin-top: 15px;
+    margin-top: 20px;
     margin-bottom: 10px;
   }
 
@@ -752,12 +754,13 @@ body {
 
   .nuestra-empresa {
     height: auto;
-    padding: 20px 0;
+    padding: 10px 0 20px 0;
   }
 
   .titulo-empresa {
     font-size: 18px;
     margin-bottom: 10px;
+    padding-top: 10px;
   }
 
   .parrafo-empresa {
@@ -795,6 +798,7 @@ body {
 
   .titulo-footer {
     font-size: 18px;
+    margin: 15px 10px 0 10px;
   }
 
   .subtitulo-footer {
@@ -1597,6 +1601,10 @@ input[type="checkbox"] {
 @media screen and (max-width: 400px) {
   .grid {
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  }
+
+  .formulario__dos {
+    padding: 40px 25px 40px 25px;
   }
 
   .formulario {
